add unit test for facebook and github

--- a/config.example.json
+++ b/config.example.json
@@ -11,4 +11,11 @@
     "client_secret": "",
     "redirect_uri": "",
     "scope": ""
+},
+{
+    "name": "github",
+    "client_id": "",
+    "client_secret": "",
+    "redirect_uri": "",
+    "scope": ""
 }]
