--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: python
 python:
     - "2.7"
 install:
+    - pip install pep8
     - pip install -r requirements.txt
-script:
     - pip install -e .
     - pip install -r tests/requirements.txt
+script:
+    - pep8 --ignore=E501 .
     - python tests/test.py
