rename config file to avoid conflict

--- a/oauth2py.config.example.json
+++ b/oauth2py.config.example.json
@@ -18,4 +18,11 @@
     "client_secret": "",
     "redirect_uri": "",
     "scope": ""
+},
+{
+    "name": "twitter",
+    "client_id": "",
+    "client_secret": "",
+    "redirect_uri": "",
+    "scope": ""
 }]
